kubernetes/brpproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brpproxy
  labels:
    app: haal-centraal-brp-bevragen-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: brpproxy
  template:
    metadata:
      labels:
        name: brpproxy
        tier: vertrouwd
    spec:
      containers:
        - name: brpproxy
          image: $HARBOR_REGISTRY/ghcr-io-proxy/brp-api/haal-centraal-brp-bevragen-proxy:latest
          ports:
            - name: http-brpproxy
              containerPort: 5000
