kubernetes/gbamock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbamock
  labels:
    app: haal-centraal-brp-bevragen-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: gbamock
  template:
    metadata:
      labels:
        name: gbamock
        tier: vertrouwd
    spec:
      containers:
        - name: gbamock
          image: $HARBOR_REGISTRY/ghcr-io-proxy/brp-api/haal-centraal-brp-bevragen-gba-mock:latest
          ports:
            - name: http
              containerPort: 5010
