kubernetes/mock-relying-party-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-relying-party
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-relying-party
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: mock-relying-party
        tier: vertrouwd
        egress-frontoffice-policy: allow
        ingress-controller-frontoffice-policy: allow
    spec:
      imagePullSecrets:
        - name: harbor-puller
      containers:
        - name: mock-relying-party
          image: $MOCK_RELYING_PARTY_IMAGE
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - name: mrp-port
              containerPort: 3004
          volumeMounts:
            - name: config-volume
              mountPath: /mock_relying_party.toml
              subPath: config.toml
      volumes:
        - name: config-volume
          configMap:
            name: nl-mock-relying-party-data
