kubernetes/mrp-verification-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrp-verification-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mrp-verification-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: mrp-verification-server
        tier: vertrouwd
        egress-frontoffice-policy: allow
        ingress-controller-frontoffice-policy: allow
        db-mrp-in-zeer-vertrouwd: allow
    spec:
      imagePullSecrets:
        - name: harbor-puller
      containers:
        - name: mrp-verification-server
          image: $MRP_VERIFICATION_SERVER_IMAGE
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - name: wallet-port
              containerPort: 3001
            - name: requester-port
              containerPort: 3002
          volumeMounts:
            - name: config-volume
              mountPath: /wallet_server.toml
              subPath: config.toml
      volumes:
        - name: config-volume
          secret:
            secretName: nl-mrp-verification-server-config
