kubernetes/preload-gba-v-data-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: preload-gba-v-data-pod
  labels:
    app: preload-gba-v-data-pod
    tier: zeer-vertrouwd
    egress-frontoffice-policy: allow
spec:
  restartPolicy: Never
  imagePullSecrets:
    - name: harbor-puller
  containers:
    - name: preload-gba-v-data-job
      image: $HARBOR_REGISTRY/quay-proxy/curl/curl:latest
      command: ["/bin/sh", "-c", "--"]
      args:
        - while true; do sleep 30; done;
      volumeMounts:
        - mountPath: /data
          name: preloaded-gba-v-data-volume
        - mountPath: /tmp/preload.sh
          name: preload-script-volume
          subPath: preload.sh
        - mountPath: /tmp/bsn_zoeken_template.xml
          name: zoek-xml-volume
          subPath: bsn_zoeken_template.xml
  volumes:
    - name: preloaded-gba-v-data-volume
      persistentVolumeClaim:
        claimName: preloaded-gba-v-data-pvc
    - name: preload-script-volume
      configMap:
        name: nl-wallet-gba-hc-converter-preload-script
        defaultMode: 0550
    - name: zoek-xml-volume
      configMap:
        name: nl-wallet-gba-hc-converter-zoek-xml
