kubernetes/brpproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brpproxy
  labels:
    app: haal-centraal-brp-bevragen-api
spec:
  selector:
    name: brpproxy
    tier: vertrouwd
  ports:
    - name: "5001"
      port: 5001
      targetPort: http-brpproxy
