kubernetes/gba-hc-converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gba-hc-converter
spec:
  selector:
    app: gba-hc-converter
    tier: zeer-vertrouwd
  ports:
    - name: "gba-hc-http"
      port: 3006
      targetPort: 3006
