kubernetes/mock-relying-party-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-relying-party
  labels:
    service: mock-relying-party
spec:
  selector:
    app: mock-relying-party
    tier: vertrouwd
  ports:
    - name: mock-relying-party-http
      port: 3004
      targetPort: mock-relying-party-port
      protocol: TCP
