kubernetes/mrp-wallet-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrp-wallet-server
  labels:
    service: mrp-wallet-server
spec:
  selector:
    app: mrp-wallet-server
    tier: vertrouwd
  ports:
    - name: mrp-wallet-server-http
      port: 3001
      targetPort: wallet-port
      protocol: TCP
    - name: mrp-requester-server-http
      port: 3002
      targetPort: requester-port
      protocol: TCP
