kubernetes/static-files-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-files
  labels:
    service: static-files
spec:
  selector:
    app: static-files
    tier: vertrouwd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
