kubernetes/wallet-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-provider
  labels:
    service: wallet-provider
spec:
  selector:
    app: wallet-provider
    tier: vertrouwd
  ports:
    - name: wallet-provider-http
      port: 3000
      targetPort: wallet-provider-port
      protocol: TCP
