kubernetes/mrp-verification-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-mrp-verification-server-vpn
spec:
  ingressClassName: nginx
  rules:
    - host: $MRP_VERIFICATION_SERVER_INTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: mrp-verification-server
                port:
                  number: 3002
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - $MRP_VERIFICATION_SERVER_INTERNAL_HOSTNAME
      secretName: wildcard-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-mrp-verification-server-public
  labels:
    odcn.rijksapps.nl/inet-loadbalancer: ""
  annotations:
    odcn.rijksapps.nl/inet-loadbalancer-hostnames: "$MRP_VERIFICATION_SERVER_EXTERNAL_HOSTNAME"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains"
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Content-Security-Policy: default-src 'none'";
spec:
  ingressClassName: nginx
  rules:
    - host: $MRP_VERIFICATION_SERVER_EXTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: mrp-verification-server
                port:
                  number: 3001
            path: /$MRP_VERIFICATION_SERVER_EXTERNAL_CONTEXT_PATH/(.*)
            pathType: Prefix
  tls:
    - hosts:
        - $MRP_VERIFICATION_SERVER_EXTERNAL_HOSTNAME
      secretName: nl-wallet-letsencrypt-live-cert
