kubernetes/mrp-wallet-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-mrp-wallet-server-vpn
  labels:
    odcn.rijksapps.nl/inet-loadbalancer: ""
  annotations:
    odcn.rijksapps.nl/inet-loadbalancer-hostnames: "$MRP_WALLET_SERVER_INTERNAL_HOSTNAME"
spec:
  ingressClassName: nginx
  rules:
    - host: $MRP_WALLET_SERVER_INTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: mrp-wallet-server
                port:
                  number: 3002
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - $MRP_WALLET_SERVER_INTERNAL_HOSTNAME
      secretName: wildcard-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nl-mrp-wallet-server-public
  labels:
    odcn.rijksapps.nl/inet-loadbalancer: ""
  annotations:
    odcn.rijksapps.nl/inet-loadbalancer-hostnames: "$MRP_WALLET_SERVER_EXTERNAL_HOSTNAME"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: $MRP_WALLET_SERVER_EXTERNAL_HOSTNAME
      http:
        paths:
          - backend:
              service:
                name: mrp-wallet-server
                port:
                  number: 3001
            path: /$MRP_WALLET_SERVER_EXTERNAL_CONTEXT_PATH/(.*)
            pathType: Prefix
  tls:
    - hosts:
        - $MRP_WALLET_SERVER_EXTERNAL_HOSTNAME
      secretName: nl-wallet-letsencrypt-live-cert
