kubernetes/gba-hc-converter-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gba-in-zeer-vertrouwd
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              gba-in-zeer-vertrouwd: allow
  podSelector:
    matchLabels:
      app: gba-hc-converter
  policyTypes:
    - Ingress
