kubernetes/pid-issuer-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-pi-in-zeer-vertrouwd
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              db-pi-in-zeer-vertrouwd: allow
  podSelector:
    matchLabels:
      app: pid-issuer-database
  policyTypes:
    - Ingress
