kubernetes/wallet-provider-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-in-zeer-vertrouwd
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              db-in-zeer-vertrouwd: allow
  podSelector:
    matchLabels:
      app: database
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hsm-in-zeer-vertrouwd
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              hsm-in-zeer-vertrouwd: allow
  podSelector:
    matchLabels:
      app: hsm-simulator
  policyTypes:
    - Ingress
