kubernetes/wallet-provider-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-in-zeer-vertrouwd
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              db-in-zeer-vertrouwd: allow
  podSelector:
    matchLabels:
      app: database
  policyTypes:
    - Ingress
